2004-02-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/beam-quanting.cc (score_forbidden_quants): check all staff
	lines for falling into beam-gap.  

	* lily/note-spacing.cc (get_spacing): less space at EOL in case of
	key/clef/time signatures. 

	* input/test/ossia.ly: revise example.

	* lily/span-bar.cc (evaluate_glyph): read 'glyph of self first.
	cleanup.
	
	* lily/grob-scheme.cc (LY_DEFINE): change a few function names to
	comply to Scheme standard.  Remove ly:get-paper-variable

2004-02-17  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/convert-ly.py (2.1.22): Corrected documentation printout.

2004-02-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/accidental-engraver.cc (process_acknowledged_grobs): use
	properties from Voice context. This fixes staff-switches during
	grace contexts.

	* lily/note-collision.cc (check_meshing_chords): only wipe heads
	if necessary. Else, simply wipe dots.

	* input/test/beam-alternate.ly: new file

	* input/test/piano-staff-distance.ly: new file.

	* lily/translator-group.cc (recurse_down_translators): use
	Direction for bottom-up/top-down.

	* lily/include/translator.hh (class Translator): add
	process_music() and do_announces(). This obviates
	recurse_down_{engravers,performers}.

	* ly/declarations-init.ly (melismaEnd): use ManualMelismaEvent for
	\melisma and \melismaEnd

	* lily/melisma-engraver.cc (process_music): change to
	Melisma_translator, unify with performer. Accept
	ManualMelismaEvent.

	* ly/engraver-init.ly: add Font_size_engraver.

2004-02-16  Heikki Junes  <hjunes@cc.hut.fi>

	* lily/align-interface.cc, lily/axis-group-engraver.cc: spell
	it hara-kiri.

	* input/regression/{many}.ly: improve descriptions trying to figure
	out what is tested.

2004-02-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/slur.cc (broken_trend_offset): robustness fix.

	* VERSION: release 2.1.24

	* lily/context.cc (find_create_context): go to Score if it exists.

	* lily/context-scheme.cc: new file.
