@@ -1,7 +1,13 @@
+2004-02-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* scm/part-combiner.scm (determine-split-list): robustification.
+
 2004-02-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/beam-quanting.cc (score_forbidden_quants): check all staff
-	lines for falling into beam-gap.  
+	lines for falling into beam-gap.
+	(score_forbidden_quants): check all staff lines for falling in
+	beam gaps.
 
 	* lily/note-spacing.cc (get_spacing): less space at EOL in case of
 	key/clef/time signatures. 
